After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 62131 - 72.16 - Can't ungroup rows
72.16 - Can't ungroup rows
Status: RESOLVED FIXED
Product: Gnumeric
Classification: Applications
Component: General
git master
Other Linux
: Normal normal
: ---
Assigned To: Jody Goldberg
Jody Goldberg
Depends on:
Blocks:
 
 
Reported: 2001-10-11 06:51 UTC by Chema Celorio
Modified: 2004-12-22 21:47 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Chema Celorio 2001-10-11 06:51:18 UTC
1. get http://www.gnome.org/~chema/bug_072_16.gnumeric

Try clickin on the "+" to ungroup row 6.
Comment 1 Jody Goldberg 2001-11-09 08:09:05 UTC
This is patched in CVS.  I hope this doesn't screw something else up.