http://bugzilla.gnome.org/show_bug.cgi?id=62131 The logic is to funky for

2001-11-09  Jody Goldberg <jgoldberg@home.com>

	http://bugzilla.gnome.org/show_bug.cgi?id=62131
	* src/commands.c (cmd_colrow_outline_change) : The logic is to funky
	  for my health.  I hope this doesn't screw something else up.